--- a/arch/arm64/configs/crux_defconfig
+++ b/arch/arm64/configs/crux_defconfig
@@ -17,19 +17,22 @@ CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_IKHEADERS=y
-CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
+# CONFIG_IKHEADERS is not set
+CONFIG_LOG_BUF_SHIFT=21
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_BLK_DEV_THROTTLING_LOW=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
+# CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
@@ -38,14 +41,15 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+# CONFIG_SYSFS_SYSCALL is not set
 CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
+CONFIG_PERF_EVENTS=y
+# CONFIG_VM_EVENT_COUNTERS is not set
+# CONFIG_VMAP_STACK is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_PROFILING=y
+# CONFIG_SLUB_CPU_PARTIAL IS not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULE_SIG=y
@@ -73,7 +77,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_ZPOOL=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
-CONFIG_OKL4_GUEST=y
+# CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -85,7 +89,7 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
-# CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
+# CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_PM_WAKELOCKS=y
@@ -144,7 +148,7 @@ CONFIG_IPV6_VTI=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
-CONFIG_BRIDGE_NETFILTER=y
+# CONFIG_BRIDGE_NETFILTER is not set
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -156,7 +160,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
 CONFIG_NF_CONNTRACK_TFTP=y
-CONFIG_NF_CT_NETLINK=y
+# CONFIG_NF_CT_NETLINK is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
@@ -239,6 +243,7 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_NETEM=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -262,8 +267,8 @@ CONFIG_NET_SWITCHDEV=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
-CONFIG_QRTR_FIFO=y
 CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
@@ -274,7 +279,6 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_NFC_NQ=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_QCOM=y
@@ -315,10 +319,60 @@ CONFIG_NETDEVICES=y
 CONFIG_BONDING=y
 CONFIG_DUMMY=y
 CONFIG_TUN=y
-CONFIG_VETH=y
-CONFIG_SKY2=y
+# CONFIG_NET_VENDOR_3COM is not set
+# CONFIG_NET_VENDOR_ADAPTEC is not set
+# CONFIG_NET_VENDOR_AGERE is not set
+# CONFIG_NET_VENDOR_ALACRITECH is not set
+# CONFIG_NET_VENDOR_ALTEON is not set
+# CONFIG_NET_VENDOR_AMAZON is not set
+# CONFIG_NET_VENDOR_AMD is not set
+# CONFIG_NET_VENDOR_AQUANTIA is not set
+# CONFIG_NET_VENDOR_ARC is not set
+# CONFIG_NET_VENDOR_ATHEROS is not set
+# CONFIG_NET_CADENCE is not set
+# CONFIG_NET_VENDOR_BROADCOM is not set
+# CONFIG_NET_VENDOR_BROCADE is not set
+# CONFIG_NET_VENDOR_CAVIUM is not set
+# CONFIG_NET_VENDOR_CHELSIO is not set
+# CONFIG_NET_VENDOR_CISCO is not set
+# CONFIG_NET_VENDOR_DEC is not set
+# CONFIG_NET_VENDOR_DLINK is not set
+# CONFIG_NET_VENDOR_EMULEX is not set
+# CONFIG_NET_VENDOR_EZCHIP is not set
+# CONFIG_NET_VENDOR_EXAR is not set
+# CONFIG_NET_VENDOR_HISILICON is not set
+# CONFIG_NET_VENDOR_HP is not set
+# CONFIG_NET_VENDOR_HUAWEI is not set
+# CONFIG_NET_VENDOR_INTEL is not set
+# CONFIG_NET_VENDOR_MARVELL is not set
+# CONFIG_NET_VENDOR_MELLANOX is not set
+# CONFIG_NET_VENDOR_MICREL is not set
+# CONFIG_NET_VENDOR_MICROCHIP is not set
+# CONFIG_NET_VENDOR_MYRI is not set
+# CONFIG_NET_VENDOR_NATSEMI is not set
+# CONFIG_NET_VENDOR_NETRONOME is not set
+# CONFIG_NET_VENDOR_NVIDIA is not set
+# CONFIG_NET_VENDOR_OKI is not set
+# CONFIG_NET_PACKET_ENGINE is not set
+# CONFIG_NET_VENDOR_QLOGIC is not set
+# CONFIG_NET_VENDOR_REALTEK is not set
+# CONFIG_NET_VENDOR_RENESAS is not set
+# CONFIG_NET_VENDOR_RDC is not set
+# CONFIG_NET_VENDOR_ROCKER is not set
+# CONFIG_NET_VENDOR_SAMSUNG is not set
+# CONFIG_NET_VENDOR_SEEQ is not set
+# CONFIG_NET_VENDOR_SILAN is not set
+# CONFIG_NET_VENDOR_SIS is not set
+# CONFIG_NET_VENDOR_SOLARFLARE is not set
+# CONFIG_NET_VENDOR_SMSC is not set
+# CONFIG_NET_VENDOR_STMICRO is not set
+# CONFIG_NET_VENDOR_SUN is not set
+# CONFIG_NET_VENDOR_TEHUTI is not set
+# CONFIG_NET_VENDOR_TI is not set
+# CONFIG_NET_VENDOR_VIA is not set
+# CONFIG_NET_VENDOR_WIZNET is not set
+# CONFIG_NET_VENDOR_SYNOPSYS is not set
 CONFIG_RMNET=y
-CONFIG_SMSC911X=y
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
@@ -333,13 +387,27 @@ CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_RTL8152=y
-CONFIG_USB_LAN78XX=y
 CONFIG_USB_USBNET=y
-CONFIG_WIL6210=y
+# CONFIG_WLAN_VENDOR_ADMTEK is not set
+# CONFIG_WLAN_VENDOR_ATMEL is not set
+# CONFIG_WLAN_VENDOR_BROADCOM is not set
+# CONFIG_WLAN_VENDOR_CISCO is not set
+# CONFIG_WLAN_VENDOR_INTEL is not set
+# CONFIG_WLAN_VENDOR_INTERSIL is not set
+# CONFIG_WLAN_VENDOR_MARVELL is not set
+# CONFIG_WLAN_VENDOR_MEDIATEK is not set
+# CONFIG_WLAN_VENDOR_RALINK is not set
+# CONFIG_WLAN_VENDOR_REALTEK is not set
+# CONFIG_WLAN_VENDOR_RSI is not set
+# CONFIG_WLAN_VENDOR_ST is not set
+# CONFIG_WLAN_VENDOR_TI is not set
+# CONFIG_WLAN_VENDOR_ZYDAS is not set
+# CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_GPIO=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
@@ -353,7 +421,6 @@ CONFIG_TOUCHSCREEN_NT36XXX=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_I2C_BY_DMA=y
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 # CONFIG_INPUT_QTI_HAPTICS is No Set
 CONFIG_INPUT_UINPUT=y
@@ -375,30 +442,23 @@ CONFIG_SERIAL_MSM_GENI=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
-CONFIG_DIAG_CHAR=y
+# CONFIG_BACKLIGHT_GENERIC is not set
+# CONFIG_SND_VERBOSE_PROCFS is not set
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=y
-CONFIG_OKL4_PIPE=y
 CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=y
 CONFIG_I2C_QCOM_GENI=y
 CONFIG_SPI=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
-CONFIG_SPMI_SIMULATOR=y
-CONFIG_PM8150_PMIC_SIMULATOR=y
-CONFIG_PM8150B_PMIC_SIMULATOR=y
-CONFIG_PM8150L_PMIC_SIMULATOR=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_SM8150=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_QCOM_DLOAD_MODE=y
-CONFIG_POWER_RESET_XGENE=y
-CONFIG_POWER_RESET_SYSCON=y
 #CONFIG_QPNP_FG_GEN4=y
 CONFIG_FUEL_GAUGE_BQ27Z561=y
 #CONFIG_SMB1355_SLAVE_CHARGER=y
@@ -413,6 +473,21 @@ CONFIG_LN8282=y
 CONFIG_IDT_P9220=y
 CONFIG_IDT_P9220_CRUX=y
 CONFIG_HALO_7221=y
+# CONFIG_ARM64_ERRATUM_826319 is not set
+# CONFIG_ARM64_ERRATUM_827319 is not set
+# CONFIG_ARM64_ERRATUM_824069 is not set
+# CONFIG_ARM64_ERRATUM_819472 is not set
+# CONFIG_ARM64_ERRATUM_832075 is not set
+# CONFIG_ARM64_ERRATUM_845719 is not set
+# CONFIG_CAVIUM_ERRATUM_22375 is not set
+# CONFIG_CAVIUM_ERRATUM_23154 is not set
+# CONFIG_CAVIUM_ERRATUM_27456 is not set
+# CONFIG_CAVIUM_ERRATUM_30115 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1003 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
+# CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
+# CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_SM8150=y
 CONFIG_THERMAL=y
@@ -441,39 +516,32 @@ CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
+# CONFIG_RC_CORE is not set
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
-CONFIG_USB_GSPCA=y
+# CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
-# CONFIG_DVB_MPQ is not set
-# CONFIG_DVB_MPQ_DEMUX is not set
-# CONFIG_DVB_MPQ_TSPP1 is not set
-CONFIG_TSPP=y
+# CONFIG_VGA_ARB is not set
 CONFIG_DRM=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
-CONFIG_DRM_MSM_REGISTER_LOGGING=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_FB_VIRTUAL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_ARMCLCD=y
-CONFIG_LCD_CLASS_DEVICE=y
-# CONFIG_BACKLIGHT_GENERIC is not set
+# CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -495,10 +563,6 @@ CONFIG_SONY_FF=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_HCD_PLATFORM=y
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_MSM=y
@@ -535,24 +599,23 @@ CONFIG_USB_CONFIGFS_F_GSI=y
 CONFIG_USB_CONFIGFS_F_QDSS=y
 CONFIG_USB_PD_POLICY=y
 CONFIG_QPNP_USB_PDPHY=y
-CONFIG_MMC=y
-CONFIG_MMC_PERF_PROFILING=y
-CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_TEST=y
-CONFIG_MMC_RING_BUFFER=y
-CONFIG_MMC_PARANOID_SD_INIT=y
-CONFIG_MMC_CLKGATE=y
-CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_PLTFM=y
-CONFIG_MMC_SDHCI_MSM=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_QPNP_FLASH_V2=y
 CONFIG_LEDS_QPNP_HAPTICS=y
-CONFIG_LEDS_QCOM_CLK=y
 CONFIG_LEDS_QTI_TRI_LED=y
 CONFIG_LEDS_TRIGGER_TIMER=y
+# CONFIG_EDAC is not set
+# CONFIG_EDAC_KRYO_ARM64 is not set
+# CONFIG_EDAC_KRYO_ARM64_POLL is not set
+# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
+# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE is not set
+# CONFIG_EDAC_GIC is not set
+# CONFIG_EDAC_XGENE is not set
+# CONFIG_EDAC_CORTEX_ARM64 is not set
+# CONFIG_EDAC_QCOM_LLCC is not set
+# CONFIG_EDAC_DEBUG is not set
+# CONFIG_EDAC_THUNDERX is not set
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_DMADEVICES=y
@@ -562,6 +625,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
+CONFIG_ION_POOL_AUTO_REFILL=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
 CONFIG_SPS=y
@@ -573,9 +637,9 @@ CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
-CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
+# CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_QCOM_MDSS_PLL=y
 CONFIG_SPMI_PMIC_CLKDIV=y
 CONFIG_MSM_CLK_AOP_QMP=y
@@ -601,19 +665,15 @@ CONFIG_RPMSG_QCOM_GLINK_SPSS=y
 CONFIG_RPMSG_QCOM_GLINK_SPI=y
 CONFIG_QCOM_MEM_OFFLINE=y
 CONFIG_OVERRIDE_MEMORY_LIMIT=y
-CONFIG_QCOM_CPUSS_DUMP=y
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_SM8150_LLCC=y
-CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
 CONFIG_QCOM_QMI_POWER_COLLAPSE=y
 CONFIG_QCOM_SMEM=y
-CONFIG_QCOM_MEMORY_DUMP_V2=y
-CONFIG_QCOM_WATCHDOG_V2=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_SMP2P=y
 CONFIG_QPNP_PBS=y
 CONFIG_MSM_SERVICE_LOCATOR=y
@@ -643,16 +703,14 @@ CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
 CONFIG_QCOM_QDSS_BRIDGE=y
-CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
+# CONFIG_MSM_EVENT_TIMER is not set
 CONFIG_MSM_PM=y
 CONFIG_MSM_QBT1000=y
 CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
-CONFIG_RMNET_CTL=y
 # CONFIG_MSM_PERFORMANCE is not set
-CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_AOP_DDR_MESSAGING=y
@@ -680,19 +738,12 @@ CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_KGSL=y
 CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_QCOM_LLCC_PMU=y
-CONFIG_RAS=y
+# CONFIG_RAS is not set
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_SENSORS_SSC=y
-CONFIG_ESOC=y
-CONFIG_ESOC_DEV=y
-CONFIG_ESOC_CLIENT=y
-CONFIG_ESOC_MDM_4x=y
-CONFIG_ESOC_MDM_DRV=y
-CONFIG_ESOC_MDM_DBG_ENG=y
-CONFIG_MSM_TZ_LOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -708,10 +759,12 @@ CONFIG_FRAME_WARN=4096
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_QUOTA=y
-CONFIG_QUOTA_NETLINK_INTERFACE=y
+# CONFIG_QUOTA_NETLINK_INTERFACE is not set
 CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
 CONFIG_OVERLAY_FS=y
+CONFIG_OVERLAY_FS_REDIRECT_DIR=y
+CONFIG_OVERLAY_FS_INDEX=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
@@ -734,15 +787,16 @@ CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_TIMESPEC=y
 CONFIG_PRINTK_PROCESS=y
 CONFIG_PRINTK_EXTRA_LOGBUF_SHIFT=20
-CONFIG_DEBUG_INFO=y
-CONFIG_PAGE_OWNER=y
+# CONFIG_DEBUG_FS is not set
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_PAGE_EXTENSION=y
 CONFIG_PANIC_TIMEOUT=-1
-CONFIG_SCHEDSTATS=y
+CONFIG_RCU_PANIC_ON_STALL=1
+# CONFIG_UPROBE_EVENTS is not set
+# CONFIG_TRACING_EVENTS_GPIO is not set
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_DEBUG_LIST=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_IPC_LOGGING=y
-CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_SECURITY=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_HARDENED_USERCOPY=y
@@ -773,13 +827,14 @@ CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
-CONFIG_STACK_HASH_ORDER_SHIFT=12
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
 CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
+CONFIG_RMNET_PERF=y
+CONFIG_RMNET_SHS=y
 CONFIG_MIHW=y
 CONFIG_MILLET=y
 CONFIG_SCHED_CASS=y
